src/snapshots/hello_mlir__parser__tests__parse_if_expression_with_else_if_chain.snap
---
source: src/parser.rs
expression: program
---
functions:
  - name: test
    params: []
    type: I32
    body:
      - Expr:
          expr:
            If:
              condition:
                BoolLit:
                  value: true
                  span:
                    start: 26
                    end: 30
                    context: ~
              then_branch:
                IntLit:
                  value: "1"
                  span:
                    start: 41
                    end: 42
                    context: ~
                  type: ~
              else_branch:
                If:
                  condition:
                    BoolLit:
                      value: true
                      span:
                        start: 67
                        end: 71
                        context: ~
                  then_branch:
                    IntLit:
                      value: "2"
                      span:
                        start: 86
                        end: 87
                        context: ~
                      type: ~
                  else_branch:
                    If:
                      condition:
                        BoolLit:
                          value: true
                          span:
                            start: 120
                            end: 124
                            context: ~
                      then_branch:
                        IntLit:
                          value: "3"
                          span:
                            start: 143
                            end: 144
                            context: ~
                          type: ~
                      else_branch:
                        IntLit:
                          value: "4"
                          span:
                            start: 182
                            end: 183
                            context: ~
                          type: ~
                      span:
                        start: 117
                        end: 197
                        context: ~
                  span:
                    start: 64
                    end: 207
                    context: ~
              span:
                start: 23
                end: 213
                context: ~
          span:
            start: 23
            end: 213
            context: ~
    span:
      start: 0
      end: 215
      context: ~
