src/snapshots/hello_mlir__parser__tests__parse_if_statement.snap
---
source: src/parser.rs
expression: program
---
stmts:
  - If:
      condition:
        IntLit:
          value: 1
          span:
            start: 3
            end: 4
            context: ~
      then_branch:
        - Expr:
            expr:
              IntLit:
                value: 1
                span:
                  start: 7
                  end: 8
                  context: ~
            span:
              start: 7
              end: 8
              context: ~
      else_branch: ~
      span:
        start: 0
        end: 10
        context: ~
