src/snapshots/hello_mlir__parser__tests__parse_if_statement_with_else.snap
---
source: src/parser.rs
expression: program
---
functions:
  - name: test
    params: []
    type: I32
    body:
      - If:
          condition:
            IntLit:
              value: "1"
              span:
                start: 22
                end: 23
                context: ~
              type: ~
          then_branch:
            - Expr:
                expr:
                  IntLit:
                    value: "1"
                    span:
                      start: 26
                      end: 27
                      context: ~
                    type: ~
                span:
                  start: 26
                  end: 27
                  context: ~
          else_branch:
            - Expr:
                expr:
                  IntLit:
                    value: "2"
                    span:
                      start: 37
                      end: 38
                      context: ~
                    type: ~
                span:
                  start: 37
                  end: 38
                  context: ~
          span:
            start: 19
            end: 40
            context: ~
    span:
      start: 0
      end: 42
      context: ~
