src/snapshots/hello_mlir__parser__tests__parse_if_statement_with_nested_else.snap
---
source: src/parser.rs
expression: program
---
functions:
  - name: test
    params: []
    type: I32
    body:
      - If:
          condition:
            IntLit:
              value: "1"
              span:
                start: 26
                end: 27
                context: ~
              type: ~
          then_branch:
            - If:
                condition:
                  IntLit:
                    value: "2"
                    span:
                      start: 41
                      end: 42
                      context: ~
                    type: ~
                then_branch:
                  - Expr:
                      expr:
                        IntLit:
                          value: "3"
                          span:
                            start: 57
                            end: 58
                            context: ~
                          type: ~
                      span:
                        start: 57
                        end: 58
                        context: ~
                else_branch:
                  - Expr:
                      expr:
                        IntLit:
                          value: "4"
                          span:
                            start: 88
                            end: 89
                            context: ~
                          type: ~
                      span:
                        start: 88
                        end: 89
                        context: ~
                span:
                  start: 38
                  end: 99
                  context: ~
          else_branch:
            - Expr:
                expr:
                  IntLit:
                    value: "5"
                    span:
                      start: 121
                      end: 122
                      context: ~
                    type: ~
                span:
                  start: 121
                  end: 122
                  context: ~
          span:
            start: 23
            end: 128
            context: ~
    span:
      start: 0
      end: 130
      context: ~
