src/snapshots/hello_mlir__parser__tests__parse_integer_literal.snap
---
source: src/parser.rs
expression: program
---
stmts:
  - Expr:
      expr:
        IntLit:
          value: 42
          span:
            start: 0
            end: 2
            context: ~
      span:
        start: 0
        end: 2
        context: ~
