src/snapshots/hello_mlir__parser__tests__parse_mixed_top_level_statements_should_fail.snap
---
source: src/parser.rs
expression: "format!(\"{:?}\", errors)"
---
"[found 'LetDeclaration' at 23..26 expected 'FunctionDeclaration', or end of input]"
