src/snapshots/hello_mlir__parser__tests__parse_top_level_assignment_should_fail.snap
---
source: src/parser.rs
expression: "format!(\"{:?}\", errors)"
---
"[found 'Identifier(\"x\")' at 0..1 expected 'FunctionDeclaration', or end of input]"
